--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,13 +2,13 @@
 name: app
 
 # Descripción del proyecto
-description: "A new Flutter project."
+description: "Gabriel Coach Personal Trainer App."
 
 # No publicar este paquete a un repositorio público como pub.dev
 publish_to: 'none'
 
 # Versión de la aplicación (versión principal y número de compilación)
-version: 1.0.4+5
+version: 1.0.5+6
 
 # Entorno de SDK que esta aplicación soporta (mínimo y máximo permitido)
 environment:
